[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patrol-archiver"
version = "0.1.0"
description = "巡检照片归档校验 CLI 工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
patrol-archiver = "patrol_archiver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["patrol_archiver*"]
